--- a/index.html
+++ b/index.html
@@ -1,112 +1,175 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paroisse St Laurent - La Bresse</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="images/croix_chretienne.jpg" type="image/jpeg">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="images/croix_chretienne.jpg" type="image/jpeg" />
+  </head>
+  <body>
     <header>
-        <div class="header-content">
-            <div class="logo">
-                <img src="images/croix_chretienne.jpg" alt="Croix chrétienne">
-                <h1>Paroisse St Laurent</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html" class="active">Accueil</a></li>
-                    <li><a href="evangiles.html">Évangiles & Homélies</a></li>
-                    <li><a href="admin/index.html">Administration</a></li>
-                </ul>
-            </nav>
+      <div class="header-content">
+        <div class="logo">
+          <img src="images/croix_chretienne.jpg" alt="Croix chrétienne" />
+          <h1>Paroisse St Laurent</h1>
         </div>
+        <nav>
+          <ul>
+            <li><a href="index.html" class="active">Accueil</a></li>
+            <li><a href="evangiles.html">Évangiles & Homélies</a></li>
+            <li><a href="admin/index.html">Administration</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Bienvenue à la Paroisse St Laurent</h2>
-                <p>Située au cœur de La Bresse dans les Vosges, notre paroisse vous accueille dans un esprit de foi, d'espérance et de charité. Venez découvrir la richesse de notre communauté chrétienne et partager avec nous les moments de prière et de recueillement.</p>
-                <a href="evangiles.html" class="btn">Découvrir les Évangiles</a>
-            </div>
-        </section>
-
-        <div class="random-image-container">
-            <img id="randomImage" src="images/croix_chretienne.jpg" alt="Image spirituelle" class="random-image">
-            <p><em>Image spirituelle du jour</em></p>
+      <section class="hero">
+        <div class="hero-content">
+          <h2>Bienvenue à la Paroisse St Laurent</h2>
+          <p>
+            Située au cœur de La Bresse dans les Vosges, notre paroisse vous
+            accueille dans un esprit de foi, d'espérance et de charité. Venez
+            découvrir la richesse de notre communauté chrétienne et partager
+            avec nous les moments de prière et de recueillement.
+          </p>
+          <a href="evangiles.html" class="btn">Découvrir les Évangiles</a>
         </div>
+      </section>
 
-        <section class="card fade-in">
-            <h3>Notre Mission</h3>
-            <p>La paroisse St Laurent de La Bresse est un lieu de rassemblement pour tous les fidèles de notre région. Nous nous efforçons de créer une communauté accueillante où chacun peut approfondir sa foi, participer à la vie liturgique et s'engager dans le service du prochain.</p>
-            <p>Nos activités incluent les célébrations eucharistiques, les temps de prière, les catéchèses, et diverses actions caritatives qui témoignent de notre engagement chrétien.</p>
-        </section>
+      <div class="random-image-container">
+        <img
+          id="randomImage"
+          src="images/croix_chretienne.jpg"
+          alt="Image spirituelle"
+          class="random-image"
+        />
+        <p><em>Image spirituelle du jour</em></p>
+      </div>
 
-        <section class="card fade-in">
-            <h3>Horaires des Messes</h3>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; margin-top: 1rem;">
-                <div>
-                    <h4 style="color: var(--primary-color); margin-bottom: 0.5rem;">Dimanche</h4>
-                    <p>Messe dominicale : 10h30</p>
-                </div>
-                <div>
-                    <h4 style="color: var(--primary-color); margin-bottom: 0.5rem;">Semaine</h4>
-                    <p>Mardi et Jeudi : 18h00</p>
-                    <p>Samedi : 18h00 (Vigile)</p>
-                </div>
-                <div>
-                    <h4 style="color: var(--primary-color); margin-bottom: 0.5rem;">Fêtes</h4>
-                    <p>Selon le calendrier liturgique</p>
-                    <p>Consultez les annonces</p>
-                </div>
-            </div>
-        </section>
+      <section class="card fade-in">
+        <h3>Notre Mission</h3>
+        <p>
+          La paroisse St Laurent de La Bresse est un lieu de rassemblement pour
+          tous les fidèles de notre région. Nous nous efforçons de créer une
+          communauté accueillante où chacun peut approfondir sa foi, participer
+          à la vie liturgique et s'engager dans le service du prochain.
+        </p>
+        <p>
+          Nos activités incluent les célébrations eucharistiques, les temps de
+          prière, les catéchèses, et diverses actions caritatives qui témoignent
+          de notre engagement chrétien.
+        </p>
+      </section>
 
-        <section class="card fade-in">
-            <h3>Vie Paroissiale</h3>
-            <p>Notre paroisse propose de nombreuses activités pour tous les âges :</p>
-            <ul style="margin-top: 1rem; padding-left: 2rem;">
-                <li><strong>Catéchisme</strong> : Tous les mercredis de 14h à 15h30</li>
-                <li><strong>Groupe de prière</strong> : Premier vendredi du mois à 20h</li>
-                <li><strong>Visites aux malades</strong> : Sur demande</li>
-                <li><strong>Préparation aux sacrements</strong> : Baptême, Confirmation, Mariage</li>
-                <li><strong>Actions caritatives</strong> : Collectes, aide aux plus démunis</li>
-            </ul>
-        </section>
+      <section class="card fade-in">
+        <h3>Horaires des Messes</h3>
+        <div
+          style="
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+            margin-top: 1rem;
+          "
+        >
+          <div>
+            <h4 style="color: var(--primary-color); margin-bottom: 0.5rem">
+              Dimanche
+            </h4>
+            <p>Messe dominicale : 10h30</p>
+          </div>
+          <div>
+            <h4 style="color: var(--primary-color); margin-bottom: 0.5rem">
+              Semaine
+            </h4>
+            <p>Mardi : 8h30</p>
+            <p>Vendredi : 18h30</p>
+          </div>
+          <div>
+            <h4 style="color: var(--primary-color); margin-bottom: 0.5rem">
+              Fêtes
+            </h4>
+            <p>Selon le calendrier liturgique</p>
+            <p>Consultez les annonces</p>
+          </div>
+        </div>
+      </section>
 
-        <section class="card fade-in">
-            <h3>Contact</h3>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; margin-top: 1rem;">
-                <div>
-                    <h4 style="color: var(--primary-color); margin-bottom: 0.5rem;">Adresse</h4>
-                    <p>Église St Laurent<br>
-                    Place de l'Église<br>
-                    88250 La Bresse</p>
-                </div>
-                <div>
-                    <h4 style="color: var(--primary-color); margin-bottom: 0.5rem;">Curé</h4>
-                    <p>Père Jean-Marie Dubois<br>
-                    Tél : 03 29 25 XX XX<br>
-                    Email : cure.labresse@diocese-saintdie.fr</p>
-                </div>
-                <div>
-                    <h4 style="color: var(--primary-color); margin-bottom: 0.5rem;">Permanences</h4>
-                    <p>Mardi et Jeudi<br>
-                    de 14h à 17h<br>
-                    Au presbytère</p>
-                </div>
-            </div>
-        </section>
+      <section class="card fade-in">
+        <h3>Vie Paroissiale</h3>
+        <p>
+          Notre paroisse propose de nombreuses activités pour tous les âges :
+        </p>
+        <ul style="margin-top: 1rem; padding-left: 2rem">
+          <li>
+            <strong>Catéchisme</strong> : Tous les mercredis de 14h à 15h30
+          </li>
+          <li>
+            <strong>Groupe de prière</strong> : Premier vendredi du mois à 20h
+          </li>
+          <li><strong>Visites aux malades</strong> : Sur demande</li>
+          <li>
+            <strong>Préparation aux sacrements</strong> : Baptême, Confirmation,
+            Mariage
+          </li>
+          <li>
+            <strong>Actions caritatives</strong> : Collectes, aide aux plus
+            démunis
+          </li>
+        </ul>
+      </section>
+
+      <section class="card fade-in">
+        <h3>Contact</h3>
+        <div
+          style="
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 2rem;
+            margin-top: 1rem;
+          "
+        >
+          <div>
+            <h4 style="color: var(--primary-color); margin-bottom: 0.5rem">
+              Adresse
+            </h4>
+            <p>
+              Paroisse Saint-Laurent-La-Bresse<br />
+              10, rue Mougel Bey<br />
+              88250 La Bresse
+            </p>
+          </div>
+          <div>
+            <h4 style="color: var(--primary-color); margin-bottom: 0.5rem">
+              Curé
+            </h4>
+            <p>
+              Père Luc FRITZ<br />
+              Tél : 03 29 25 40 46<br />
+              Email : paroisse.la.bresse@orange.fr
+            </p>
+          </div>
+          <div>
+            <h4 style="color: var(--primary-color); margin-bottom: 0.5rem">
+              Permanences
+            </h4>
+            <p>
+              Le mardi de 10 h à 11 h<br />
+              Le jeudi de 10 h à 11 h<br />
+              Le vendredi : Le père Luc FRITZ vous accueille en soirée de 17 h à
+              18 h
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Paroisse St Laurent - La Bresse. Tous droits réservés.</p>
-        <p>Site créé avec foi et dévotion pour notre communauté</p>
+      <p>&copy; 2024 Paroisse St Laurent - La Bresse. Tous droits réservés.</p>
+      <p></p>
     </footer>
 
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
-
