--- a/index.html
+++ b/index.html
@@ -103,19 +103,16 @@
         </p>
         <ul style="margin-top: 1rem; padding-left: 2rem">
           <li>
-            <strong>Catéchisme</strong> : Tous les mercredis de 14h à 15h30
+            <strong>Catéchisme</strong>
           </li>
-          <li>
-            <strong>Groupe de prière</strong> : Premier vendredi du mois à 20h
-          </li>
+          <li><strong>Groupe de prière</strong> : à définir</li>
           <li><strong>Visites aux malades</strong> : Sur demande</li>
           <li>
             <strong>Préparation aux sacrements</strong> : Baptême, Confirmation,
             Mariage
           </li>
           <li>
-            <strong>Actions caritatives</strong> : Collectes, aide aux plus
-            démunis
+            <strong>Actions caritatives</strong>
           </li>
         </ul>
       </section>
